Closed Bug 673412 Opened 13 years ago Closed 13 years ago

Fix error message typos (CERT_PKIXVerifyChain) in cmd/vfychain/vfychain.c

Categories

(NSS :: Tools, defect)

defect
Not set
trivial

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: wtc, Assigned: wtc)

Details

Attachments

(1 file)

Attached patch Proposed patchSplinter Review
Some error messages in cmd/vfychain/vfychain.c refer to
the CERT_PKIXVerifyChain function.  The correct function
name is CERT_PKIXVerifyCert.
Attachment #547693 - Flags: review?(emaldona)
Comment on attachment 547693 [details] [diff] [review]
Proposed patch

Review of attachment 547693 [details] [diff] [review]:
-----------------------------------------------------------------
Attachment #547693 - Flags: review?(emaldona) → review+
Patch checked in on the NSS trunk (NSS 3.13).

Checking in vfychain.c;
/cvsroot/mozilla/security/nss/cmd/vfychain/vfychain.c,v  <--  vfychain.c
new revision: 1.33; previous revision: 1.32
done
Status: ASSIGNED → RESOLVED
Closed: 13 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: