Bug 673412: Fix error message typos (CERT_PKIXVerifyChain) in vfychain. r=emaldona.